--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon rotate-n-15">
-                    <i class="fas fa-laugh-wink"></i>
+                    <i class="fa-solid fa-cat"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Admin<sup></sup></div>
+                <div class="sidebar-brand-text mx-3">Anyong's<sup></sup></div>
             </a>
 
             <hr class="sidebar-divider my-0">
