--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">Admin</span>
                                 <img class="img-profile rounded-circle"
-                                    src="img/undraw_profile.svg">
+                                    src="img/tes.jpg">
                             </a>
                         </li>
                     </ul>
