update img and rating

--- a/index.html
+++ b/index.html
@@ -91,10 +91,12 @@
                                 <table class="table table-bordered" id="dataTable" width="70%" cellspacing="0">
                                     <thead>
                                         <tr class="text-center table-primary">
-                                            <th>ID</th>
+                                            <th>Id</th>
                                             <th>Title</th>
                                             <th>Price</th>
                                             <th>Category</th>
+                                            <th>Rating</th>
+                                            <th>Image</th>
                                             <th>Action</th>
                                         </tr>
                                     </thead>
